--- a/{{cookiecutter.build}}/{{cookiecutter.project_name}}.env
+++ b/{{cookiecutter.build}}/{{cookiecutter.project_name}}.env
@@ -11,4 +11,6 @@ JUNTAGRICO_EMAIL_HOST={{cookiecutter.juntagrico_email_host}}
 JUNTAGRICO_EMAIL_PASSWORD={{cookiecutter.juntagrico_email_password}}
 JUNTAGRICO_EMAIL_PORT={{cookiecutter.juntagrico_email_port}}
 JUNTAGRICO_EMAIL_USER={{cookiecutter.juntagrico_email_user}}
+JUNTAGRICO_EMAIL_TLS={{cookiecutter.juntagrico_email_tls}}
+JUNTAGRICO_EMAIL_SSL={{cookiecutter.juntagrico_email_ssl}}
 GOOGLE_API_KEY={{cookiecutter.google_api_key}}
